css/styles.css
/* ... */
.collapsible--expanded .collapsible__chevron {
    transform: rotate(0);
}

.collapsible--expanded .collapsible__content {
    max-height: 100vh;
    opacity: 1;
}


/* Blocks */

.block {
    --padding-vertical: 6rem;
    padding: var(--padding-vertical) 2rem;
}

.block__header {
    text-align: center;
    margin-bottom: 4rem;
}

.block__heading {
    margin-top: 0;
}

.block--dark {
    background: #000;
    color: #7b858b;
}

.block--dark h1, .block--dark h2, .block--dark h3 {
    color: #fff;
}

.block--skewed-right {
    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 90%);
    padding-bottom: calc(var(--padding-vertical) + 4rem);
}

.block--skewed-left {
    clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%);
    padding-bottom: calc(var(--padding-vertical) + 4rem);
}

.container {
    max-width: 1140px;
    margin: 0 auto;
}


/* Nav */

.nav {
    background: #000;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    padding: 0 1rem;
    align-items: center;
}

.nav__list {
    width: 100%;
    margin: 0;
}

.nav__item {
    padding: 0.5rem 2rem;
    border-bottom: 1px solid #222;
}

.nav__item>a {
    color: #d2d0db;
    transition: color 0.2s;
}

.nav__item>a:hover {
    color: #fff;
}

.nav__toggler {
    opacity: 0.5;
    transition: box-shadow .15s;
    cursor: pointer;
}

.nav.collapsible--expanded .nav__toggler {
    opacity: 1;
    box-shadow: 0 0 0 3px #666;
    border-radius: 5px;
}

.nav__brand {
    transform: translateY(5px);
}

@media screen and (min-width:768px) {
    .nav__toggler {
        display: none;
    }

    .nav__list {
        width: auto;
        display: flex;
        font-size: 1.6rem;
        max-height: 100%;
        opacity: 1;
    }

    .nav__item {
        border: 0;
    }
}


/* Hero */

.hero__tagline {
    font-size: 2rem;
    color: #b9c3cf;
    letter-spacing: 1px;
    margin: 2rem 0 5rem;
}

.hero__image {
    width: 100%;
}

@media screen and (min-width:768px) {
    .hero {
        padding-top: 0;
    }

    .hero__content {
        text-align: left;
        align-self: center;
    }
}


/* Domain block */

.block__domain .input-group {
    box-shadow: 0 0 30px 20px #e6ebee;
    border: 0;
    margin: 4rem auto;
    max-width: 670px;
}

.block-domain__prices {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 6rem);
    font-size: 2rem;
    font-weight: 600;
    justify-items: center;
    max-width: 700px;
    margin: 0 auto;
    color: var(--color-headings);
}

@media screen and (min-width:768px) {
    .block-domain__prices {
        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    }

}


/* Plans block */

.block-plans .grid {
    gap: 8rem 4rem;
}

.block-plans .card {
    max-width: 500px;
    margin: 0 auto;
}


/* Features */

.feature__heading {
    margin: 1rem 0;
}

.feature {
    gap: 4rem 2rem;
    margin: 12rem 0;
}

.feature:first-of-type {
    margin-top: 6rem;
}

.feature__image {
    width: 100%;
}

@media screen and (min-width:768px) {
    .feature:nth-of-type(even) .feature__content {
        order: 2;
    }

}


/* Showcase */

.block-showcase__image>img {
    width: 100%;
}

@media screen and (min-width:768px) {
    .block-showcase .grid {
        grid-template-columns: 50% 50%;
    }

    .block-showcase__image {
        justify-self: end;
    }

    .block-showcase__image>img {
        width: auto;
        max-width: 700px;
    }
}


/* Footer */

.footer {
    background: #232323;
}

.footer a {
    color: #777;
    transition: color 0.3s;
}

.footer a:hover {
    color: #fff;
}

.footer__section {
    padding: 2rem;
    border-bottom: 1px solid #393939;
}

.footer__section .list {
    margin: 0;
}

.footer__heading {
    text-transform: uppercase;
    font-weight: 600;
}

.footer__brand {
    margin-top: 5rem;
    text-align: center;
}

.footer__brand img {

    /* TODO: Consider refactoring it and applying to all images */

    width: 100%;
    max-width: 230px;
}

.footer__copyright {
    font-size: 2.1rem;
    color: #fff;
    opacity: 0.3;
}

@media screen and (min-width:768px) {
    .footer_sections {
        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    }

    .footer .collapsible__chevron {
        display: none;
    }

    .footer .collapsible__content {
        opacity: 1;
        max-height: 100%;
    }

    .footer__brand {
        order: -1;
        margin-top: 1rem;
    }

    .footer__copyright {
        font-size: 1.5rem;
    }

    .footer__section {
        border: 0;
    }

    .footer__heading {
        font-size: 1.6rem;
    }
}

